--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   </head>
   <body>
 <!--The content below is only a placeholder and can be replaced.-->
@@ -16,7 +17,7 @@
  </div>
 
 
-<app-list-meeting></app-list-meeting>
+<app-create-meeting></app-create-meeting>
 
 </body>
 </html>
