--- a/client/src/app/meetings/list-meeting/list-meeting.component.html
+++ b/client/src/app/meetings/list-meeting/list-meeting.component.html
@@ -13,3 +13,57 @@
   </a>
  
 </div>
+
+  
+  <div class="col-md-3">
+    <ul class="list-group">
+        <li class="list-group-item row">
+            <div class="col-md-3">One</div>
+            <div class="col-md-9">This is a line for content</div>
+        </li>
+        <li class="list-group-item row">
+            <div class="col-md-3">Two</div>
+            <div class="col-md-9">This is more content</div>
+        </li>
+        <li class="list-group-item row">
+            <div class="col-md-3">Three</div>
+            <div class="col-md-9">This is another row here</div>
+        </li>
+        <li class="list-group-item row">
+            <div class="col-md-3">Four</div>
+            <div class="col-md-9">This is a line for content</div>
+        </li>
+    </ul>
+  </div>
+  <div class="col-md-3">
+    <ul class="list-group">
+        <li class="list-group-item row">
+            <div class="col-md-3">One</div>
+            <div class="col-md-9">This is a line for content</div>
+        </li>
+        <li class="list-group-item row">
+            <div class="col-md-3">Two</div>
+            <div class="col-md-9">This is more content</div>
+        </li>
+        <li class="list-group-item row">
+            <div class="col-md-3">Three</div>
+            <div class="col-md-9">This is another row here</div>
+        </li>
+        <li class="list-group-item row">
+            <div class="col-md-3">Four</div>
+            <div class="col-md-9">This is a line for content</div>
+        </li>
+        <li class="list-group-item row">
+          <div class="col-md-3">Four</div>
+          <div class="col-md-9">This is a line for content</div>
+      </li>
+      <li class="list-group-item row">
+        <div class="col-md-3">Four</div>
+        <div class="col-md-9">This is a line for content</div>
+    </li>
+    <li class="list-group-item row">
+      <div class="col-md-3">Four</div>
+      <div class="col-md-9">This is a line for content</div>
+  </li>
+    </ul>
+  </div>
