--- a/client/src/app/task/listTask/get-task/get-task.component.html
+++ b/client/src/app/task/listTask/get-task/get-task.component.html
@@ -1,3 +1,7 @@
-<p>
-  get-task works!
-</p>
+<ul class="list-group">
+  <li *ngFor="let post of posts"
+    class = "list-group-item">
+    {{ post.dueDate }}
+    
+  </li>
+</ul>
