--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,6 +10,22 @@
   </head>
   <body>
 <!--The content below is only a placeholder and can be replaced.-->
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Meeting Lead</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+    </ul>
+      <ul class="nav navbar-nav navbar-right">
+      <li><a href="#">Meeting</a></li>
+      <li><a href="#">Task</a></li>
+      <li><a href="#">Calender</a></li>
+    </ul>
+  </div>
+</nav>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
