--- a/client/src/app/task/listTask/get-task/get-task.component.html
+++ b/client/src/app/task/listTask/get-task/get-task.component.html
@@ -1,4 +1,4 @@
-<ul class="list-group" *ngFor="let post of posts">
+<ul class="list-group" *ngFor="let post of tasks">
   <li><h3>{{post.taskName}}</h3></li>
   <li>Responsible: {{post.taskParticipant}}</li>
   <li>Due Date: {{ post.dueDate }}</li>
