--- a/client/src/app/meetings/create-meeting/create-meeting.component.html
+++ b/client/src/app/meetings/create-meeting/create-meeting.component.html
@@ -1,80 +1,7 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
-<script></script>
-
-<br>
-
-<div class="container">
-	<div class="row">
+<ul class="list-group"  *ngFor="let meeting of meetings | filterBy: userFilter " >
+        <li><h3 class="mb-1" > {{meeting.m_name}}</h3>  </li>
+        <li>{{meeting.to_date  | date :'short'}}</li>
+        <li>{{meeting.created_by  }} | {{meeting.m_tags}}</li>
         
-        
-        <div class="dual-list list-right col-md-6"  > 
-            <div class="well" >
-                <div class="row">
-                    <div class="col-md-12 form-group panel panel-primary ">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">
-                                Panel with list and no body</h3>
-                        </div>
-                    </div>
-                </div>
-                
-                <ul class="list-group" id="dual-list-right" style="height: 300px; overflow: auto">
-                    <li class="list-group-item" data-value="6" *ngFor="let meeting of meetings">
-                        <div class="list-group" >
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                              <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1" > {{meeting.m_name}}</h5>
-                                <small>{{meeting.to_date}}</small>
-                              </div>
-                              <small>{{meeting.m_participant}}</small>
-                            </a>
-                           
-                          </div>
-
-
-                    </li>
-                   
-                </ul>
-            </div>
-        </div>
-
-
-        <div class="dual-list list-right col-md-6"  > 
-            <div class="well" >
-                <div class="row">
-                    <div class="col-md-12 form-group">
-                      <h6>Future Meetings</h6>
-                        
-                    </div>
-                </div>
-                
-                <ul class="list-group" id="dual-list-right" style="height: 300px; overflow: auto">
-                    <li class="list-group-item" data-value="6" *ngFor="let meeting of meetings">
-                        <div class="list-group" >
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                              <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1" > {{meeting.m_name}}</h5>
-                                <small>{{meeting.to_date}}</small>
-                              </div>
-                              <small>{{meeting.m_participant}}</small>
-                            </a>
-                           
-                          </div>
-
-
-                    </li>
-                   
-                </ul>
-            </div>
-        </div>
-        
-
-     
-        
-	</div>
-</div>
-
+</ul>
