--- a/client/src/app/meetings/create-meeting/create-meeting.component.html
+++ b/client/src/app/meetings/create-meeting/create-meeting.component.html
@@ -1,7 +1,7 @@
 
-<ul class="list-group"  *ngFor="let meeting of meetings | filterBy: userFilter " >
+<ul class="list-group"  *ngFor="let meeting of meetings " >
         <li><h3 class="mb-1" > {{meeting.m_name}}</h3>  </li>
         <li>{{meeting.to_date  | date :'short'}}</li>
         <li>{{meeting.created_by  }} | {{meeting.m_tags}}</li>
-        
+
 </ul>
