--- a/client/src/app/meetings/create-meeting/create-meeting.component.html
+++ b/client/src/app/meetings/create-meeting/create-meeting.component.html
@@ -1,34 +1,27 @@
 <input type="text" [(ngModel)]="term">
-<table>
-        <tr>
-                <th><h5>Past Meetings</h5></th>
-                <th><h5>Future Meetings</h5></th>
-        </tr>
-        <tr>
-                <td>
-                                <ul class="list-group"  *ngFor="let meeting of meetings | filterBy: userFilter  |filter: term" >
+<div class="row">
+                <div class="col-sm-6">
+                        <h5>Past Meetings</h5>
+                        <ul class="list-group"  *ngFor="let meeting of meetings | filterBy: userFilter  |filter: term" >
 
-                                                <div *ngIf="(meeting.to_date | date :'short')  < (today| date :'short') ">
-                                                <li><h3 class="mb-1" > {{meeting.m_name}}</h3>  </li>
-                                                <li>{{meeting.to_date  | date :'short'}}</li>
-                                                <li>{{meeting.created_by  }} | {{meeting.m_tags}}</li>
-                                                
-                                        </div>
-                                        </ul>
-                </td>
-                <td>
-                                <ul class="list-group"  *ngFor="let meeting of meetings | filterBy: userFilter  |filter: term" >
+                                <div *ngIf="(meeting.to_date | date :'short')  < (today| date :'short') ">
+                                <li><h3 class="mb-1" > {{meeting.m_name}}</h3>  </li>
+                                <li>{{meeting.to_date  | date :'short'}}</li>
+                                <li>{{meeting.created_by  }} | {{meeting.m_tags}}</li>
+                                
+                        </div>
+                        </ul>
+                </div>
+                <div class="col-sm-6">
+                        <h5>Future Meetings</h5>
+                        <ul class="list-group"  *ngFor="let meeting of meetings | filterBy: userFilter  |filter: term" >
 
-                                                <div *ngIf="(meeting.to_date | date :'short')  > (today| date :'short') ">
-                                                <li><h3 class="mb-1" > {{meeting.m_name}}</h3>  </li>
-                                                <li>{{meeting.to_date  | date :'short'}}</li>
-                                                <li>{{meeting.created_by  }} | {{meeting.m_tags}}</li>
-                                                
-                                        </div>
-                                        </ul>
-                </td>
-        </tr>
-
-
-
-</table>
+                                <div *ngIf="(meeting.to_date | date :'short')  > (today| date :'short') ">
+                                <li><h3 class="mb-1" > {{meeting.m_name}}</h3>  </li>
+                                <li>{{meeting.to_date  | date :'short'}}</li>
+                                <li>{{meeting.created_by  }} | {{meeting.m_tags}}</li>
+                                
+                        </div>
+                        </ul>
+                </div>
+</div>
