--- a/client/src/app/task/listTask/get-task/get-task.component.html
+++ b/client/src/app/task/listTask/get-task/get-task.component.html
@@ -3,7 +3,7 @@
   <div class="col-sm-4">
     <h3>Ideas</h3>
     <ul class="list-group" *ngFor="let post of tasks">
-       <div *ngIf="post.dueDate == null">
+       <div *ngIf="post.dueDate == null && post.is_done == false">
       <!-- <div *ngIf="post.is_done == false && post.dueDate != null"> -->
       <li><h4>{{post.taskName}}</h4></li>
       <li>Responsible: {{post.taskParticipant}}</li>
