--- a/client/src/app/meetings/list-meeting/list-meeting.component.html
+++ b/client/src/app/meetings/list-meeting/list-meeting.component.html
@@ -2,6 +2,7 @@
 <hr>
 <input type="text" [(ngModel)]="term">
 <hr>
+<button id="create" (click)="convert()">Create file</button> 
 
 <div class="container">
                 <div class="row">
@@ -53,5 +54,5 @@
 
                   
                 </div>
-            </div>
+</div>
             
